--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MotoMart">
-        <activity android:name=".Repository.Product_Repository"></activity>
+        <activity android:name=".Entity.cart"></activity>
+        <activity android:name=".Repository.Product_Repository" />
         <activity android:name=".Repository.Cart_Repository" />
         <activity android:name=".Response.Product_Response" />
         <activity android:name=".Response.Image_Response" />
