created design for login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MotoMart">
-        <activity android:name=".Notification.Channels"></activity>
+        <activity android:name=".Notification.Sender"></activity>
+        <activity android:name=".Notification.Channels" />
         <activity android:name=".Adapter.Sale_Adapter" />
         <activity android:name=".Adapter.Product_Adapter" />
         <activity android:name=".Adapter.Home_Adapter" />
