--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,42 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MotoMart">
-        <activity android:name=".Notification.Sender"></activity>
-        <activity android:name=".Notification.Channels" />
-        <activity android:name=".Adapter.Sale_Adapter" />
-        <activity android:name=".Adapter.Product_Adapter" />
-        <activity android:name=".Adapter.Home_Adapter" />
-        <activity android:name=".Adapter.Cart_Adapter" />
-        <activity android:name=".API.Product_API" />
-        <activity android:name=".API.Static_cart" />
-        <activity android:name=".API.Cart_API" />
-        <activity android:name=".DAO.Product_dao" />
-        <activity android:name=".Entity.product_sale" />
-        <activity android:name=".Entity.product" />
-        <activity android:name=".Entity.category" />
-        <activity android:name=".Entity.cart" />
-        <activity android:name=".Repository.Product_Repository" />
-        <activity android:name=".Repository.Cart_Repository" />
-        <activity android:name=".Response.Product_Response" />
-        <activity android:name=".Response.Image_Response" />
-        <activity android:name=".Response.Cart_Response" />
         <activity android:name=".Update" />
         <activity android:name=".Product_View" />
         <activity android:name=".Category_View" />
-        <activity android:name=".Slash_Screen" />
-        <activity android:name=".SignUp_Activity" />
-        <activity android:name=".Signup_Act" />
-        <activity android:name=".Shared_Preference" />
-        <activity android:name=".Shared_Prefence" />
-        <activity android:name=".RegisterAct" />
-        <activity android:name=".Log_IN" />
-        <activity android:name=".Main_Activity">
+        <activity android:name=".Slash_Screen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Shared_Preference" />
+        <activity android:name=".Log_IN" />
+        <activity android:name=".Main_Activity"/>
+
     </application>
 
 </manifest>
