--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,12 @@ android {
 
 dependencies {
 
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -79,8 +79,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //renguwuxian
     implementation'com.rengwuxian.materialedittext:library:2.1.4'
-//    imageslider
-    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
     //cardview
     implementation "androidx.cardview:cardview:1.0.0"
+
+
 }
